# learning_process

C++学习/: cmake.md  map容器.md  this指针.md  try-catch语句.md  unorder_map容器.md  vector容器.md  智能指针.md  模板类.md  范围循环.md
ROS学习/: ros中的一些基本API.md  ros中的时间概念.md  创建一个rqt插件类.md
linux的tips/: CMakelists.md  catkin工作空间.md  clion配置save-action.md  git 命令.md  minicom.md  scp传输rosbag.md  shell脚本.md  socketcan.md  使用ssh.md  常用命令.md  配nuc.md  配置舒适的操作环境.md
master/: catkin工作空间.md  minicom.md  urdf.md  常用命令.md  配nuc.md
rm/: Clion 配置环境.md  manual操作.md  ros包管理.md  urdf的注意事项.md  串口通信.md  云台PID与稳态误差调节.md  从零部署平衡步兵开发环境及其仿真.md  电机参数配置.md  裁判系统.md  调车方法.md  调车集.md
rm/Foc/: 控制算法.md  概念.md  硬件.md
rm/ethercat/: EtherCAT部署流程.md
rm/ethercat/rm_ecat/: ethercat msg.md  ethercat配置与使用.md  rm_ecat_manager.md  rm_ecat架构.md
rm/ethercat/rm_ecat/rm_slave/: rm_slave.md  文件结构.md
rm/轮腿/: leggedBalanceInterface.md  leggedBalanceSystemDynamic.md  leggedBalanceVisualization.md  rosReferenceManager.md  各种PID.md  调试过程.md
scripts/: memory_clean.sh  openclion.sh  test_motor.sh
scripts/system/: nvida-settings.txt  set_swap.sh
tutorials/CMakeCatkinTutorials/: CMake与Catkin基础.pptx
tutorials/CMakeCatkinTutorials/Example_01_SimpleCmake/: CMakeLists.txt  main.cpp  otherFile.cpp
tutorials/CMakeCatkinTutorials/Example_02_SimpleCmakeProject/: CMakeLists.txt
tutorials/CMakeCatkinTutorials/Example_03_AddLibarary/: CMakeLists.txt
tutorials/CMakeCatkinTutorials/Example_03_AddLibarary/include/: otherFile.h
tutorials/CMakeCatkinTutorials/Example_04_MultiCMakeLists/: CMakeLists.txt
tutorials/CMakeCatkinTutorials/Example_04_MultiCMakeLists/Code/: CMakeLists.txt
tutorials/CMakeCatkinTutorials/Example_04_MultiCMakeLists/Code/src/: main.cpp
tutorials/CMakeCatkinTutorials/Example_05_AddThirdPartyLibarary/: CMakeLists.txt
tutorials/CMakeCatkinTutorials/Example_05_AddThirdPartyLibarary/src/: main.cpp
tutorials/CMakeCatkinTutorials/Example_06_Install/: CMakeLists.txt
tutorials/CMakeCatkinTutorials/Example_06_Install/src/: main.cpp
tutorials/CMakeCatkinTutorials/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  example6  install_manifest.txt
控制理论/: lqr基础.md  mpc基础.md  卡尔曼滤波器.md  现代控制理论.md  经典控制理论.md
机器人学/: tf坐标变换.md  拉格朗日建模法.md
